--- a/control/lqr.tex
+++ b/control/lqr.tex
@@ -5,6 +5,8 @@
         \cite{Erasmus2020, Slabber2020, Us2019}.
         The \gls{LQG} technique combines \gls{LQR} with a full-state estimator to control systems where some state variables cannot be measured \cite{Li2016}.
         An \gls{LQG} was effectively used by \cite{Slabber2020} for swing-damping control of a multirotor and suspended payload system.
+        
+        \paragraph
         However, to focus on the controller performance without considering the effect of state estimation, it is assumed that full-state feedback is available in this work.
         Therefore, an \gls{LQR} for North velocity control with full-state feedback is presented in this section. 
         This controller structure can be duplicated for East velocity control due to the symmetry of a multirotor.
