Appendix spacing adjusted

--- a/appendices/appendices.tex
+++ b/appendices/appendices.tex
@@ -1,9 +1,10 @@
-\chapter{PID gains}
+\chapter{PID controller gains}
 \makeatletter\@mkboth{}{Appendix}\makeatother
 \label{appen:pid_gains}
 
+\vspace{-6mm}
 This appendix documents the \gls{PID} gains used for Honeybee.
-\vspace{-5mm}
+\vspace{-6mm}
 \paragraph
 The angular rate controller gains are given in Table~\ref{tab:angular_rate_gains}.
 
@@ -23,7 +24,7 @@ The angular rate controller gains are given in Table~\ref{tab:angular_rate_gains
 	
 	\caption{\label{tab:angular_rate_gains} The angular rate controller gains.}
 \end{table}
-\vspace{-5mm}
+\vspace{-6mm}
 \paragraph
 The angle controller gains are given in Table~\ref{tab:angular_gains}.
 
@@ -43,7 +44,7 @@ The angle controller gains are given in Table~\ref{tab:angular_gains}.
 	
 	\caption{\label{tab:angular_gains} The angle controller gains.}
 \end{table}
-\vspace{-5mm}
+\vspace{-6mm}
 \paragraph
 The velocity controller gains are given in Table~\ref{tab:vel_gains}.
 
@@ -63,7 +64,7 @@ The velocity controller gains are given in Table~\ref{tab:vel_gains}.
 	
 	\caption{\label{tab:vel_gains} The velocity controller gains.}
 \end{table}
-\vspace{-5mm}
+\vspace{-6mm}
 \paragraph
 The position controller gains are given in Table~\ref{tab:pos_gains}.
 
