Grammarly on control implementations.tex

--- a/bibtex/manual.bib
+++ b/bibtex/manual.bib
@@ -1128,7 +1128,7 @@ volume = {1},
 year = {2014}
 }
 @inproceedings{Mellinger2011a,
-abstract = {This paper addresses mechanics, design, estima- tion and control for aerial grasping. We present the design of several light-weight, low-complexity grippers that allow quadrotors to grasp and perch on branches or beams and pick up and transport payloads. We then show how the robot can use rigid body dynamic models and sensing to verify a grasp, to estimate the the inertial parameters of the grasped object, and to adapt the controller and improve performance during flight. We present experimental results with different grippers and different payloads and show the robot's ability to estimate the mass, the location of the center of mass and the moments of inertia to improve tracking performance},
+abstract = {This paper addresses mechanics, design, estima- tion and control for aerial grasping. We present the design of several light-weight, low-complexity grippers that allow quadrotors to grasp and perch on branches or beams and pick up and transport payloads. We then show how the robot can use rigid body dynamic models and sensing to verify a grasp, to estimate the inertial parameters of the grasped object, and to adapt the controller and improve performance during flight. We present experimental results with different grippers and different payloads and show the robot's ability to estimate the mass, the location of the center of mass and the moments of inertia to improve tracking performance},
 author = {Mellinger, Daniel and Lindsey, Quentin and Shomin, Michael and Kumar, Vijay},
 booktitle = {IEEE/RSJ International Conference on Intelligent Robots and Systems},
 doi = {10.1109/IROS.2011.6094871},
