--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -25,7 +25,7 @@
         is as close as possible to practical flights since the same flight stack is used in both cases.
         Gazebo applies realistic measurement noise to the signals received by PX4 
         and the PX4 flight stack applies an \gls{EKF} for state estimation.
-        Therefore the the data seen by the system identification techniques 
+        Therefore the data seen by the system identification techniques 
         include the same \gls{EKF} filtering as practical flight data.
 
         \paragraph
